manifests/watchtower/home-assistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-http
  namespace: home
spec:
  entryPoints: ["web"]
  routes:
    - kind: Rule
      match: Host(`home.watchtower.local`)
      services:
        - name: home-assistant
          port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-https
  namespace: home
spec:
  entryPoints: ["websecure"]
  routes:
    - kind: Rule
      match: Host(`home.watchtower.local`)
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: home-assistant-tls
